    even for newer MATLAB versions (R2015b and newer).
  - Fix: Output order of test events now is 1. Failed, 2. Skipped, 3. Errors.
    This reflects the order of occurence. If one test has a failure and an error,
    this may only have come from an error in its tear_down fixture.
    Failure and skip can not happen at the same time in one test.


mlUnit 1.7.0 (2018-11-21)
-------------------------

  - assert_exist_file checks for existence of a file.
  - Let recursive_test_run/run_suite_collection fail on test failures, if so
    desired. This simplifies automation, as we do not rely on specific console
    output from recursive_test_run anymore.
  - Reduce assert_equals diagnostic output to a fixed length of about 80
    characters, and also omit up to about 20 characters to the first real
    difference.
  - Improved execution time when using assert_equals on very large cell arrays.
    Very large cell arrays will take printable() a long time to prepare.
    Optimization dropped execution speed for one example from about 40s to
    about 8s on R2007b.
  - Provide release agnostic nargchk/narginchk replacement.

  - Fix: Out of memory when using assert_equals on very large cell arrays, or
    similarly large data. Very large input would cause shortest_alignment to
    run out of memory, as it has a quadratic memory print.
  - Fix: get_subfunction_names mistakes single output arguments for function names.


mlUnit 1.6.10 (2015-11-03)
--------------------------

  - Let MATLAB find mlUnit as proper toolbox. Users can query mlUnit version
    information by calling `>> ver('mlunit')` after having loaded mlUnit.
    However, it is necessary that the Contents.m is living inside a folder
    literally called "mlunit".
  - Additional failontestfail option in build.xml lets user choose whether the
    target should fail when tests failed or not.
  - Enable diff markers for multi-line char arrays and for cellstr arrays.