@@ -34,9 +34,12 @@ end
 % et al. Stop at the first item that is not on this list.
 % The files are listed alphabetically in order to ease updating it.
 filtered_files = {'abstract_assert_equals', ...
+                  'assert_contains', ...
                   'assert_empty', ...
                   'assert_equals', ...
                   'assert_error', ...
+                  'assert_exist_dir', ...
+                  'assert_exist_file', ...
                   'assert_false', ...
                   'assert_matfile_equals', ...
                   'assert_not_empty', ...
